# template-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.adoc  Session.sh  find_template_strings.sh  pixi.toml
container/: Containerfile  Containerignore  Containerignore_prod  build.sh  build_prod.sh  run.sh  run_prod.sh
src/: lib.rs  main.rs
tests/: integration_test.rs
